Move to summit-calamares-config and update kernel

--- a/plasma-arkdep/pacman.conf
+++ b/plasma-arkdep/pacman.conf
@@ -40,7 +40,7 @@ ParallelDownloads = 4
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Required DatabaseOptional
+SigLevel    = Never
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
@@ -68,18 +68,15 @@ LocalFileSigLevel = Optional
 #
 
 [core]
-SigLevel = PackageRequired
 Server = https://mirrors.manjaro.org/repo/unstable/$repo/$arch
 
 [extra]
-SigLevel = PackageRequired
 Server = https://mirrors.manjaro.org/repo/unstable/$repo/$arch
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
 [multilib]
-SigLevel = PackageRequired
 Server = https://mirrors.manjaro.org/repo/unstable/$repo/$arch
 
 # An example of a custom package repository.  See the pacman manpage for
@@ -87,3 +84,5 @@ Server = https://mirrors.manjaro.org/repo/unstable/$repo/$arch
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+#[repo] # local repo for summit-calamares-config
+#Server = file:///home/nisel/dev/arch/repo
